@@ -1,36 +1,27 @@
 package com.bshara.cryptoserver.Utils;
 
-import java.io.*;
-import java.security.KeyPairGenerator;
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.security.Key;
+import java.security.KeyFactory;
 import java.security.KeyPair;
+import java.security.KeyPairGenerator;
+import java.security.NoSuchAlgorithmException;
+import java.security.NoSuchProviderException;
 import java.security.PrivateKey;
 import java.security.PublicKey;
-import java.security.KeyFactory;
-import java.security.spec.EncodedKeySpec;
+import java.security.Signature;
+import java.security.spec.InvalidKeySpecException;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
-import java.security.spec.InvalidKeySpecException;
-import java.security.NoSuchAlgorithmException;
-
 import java.util.Base64;
-import java.security.Key;
-import java.security.MessageDigest;
-import java.security.NoSuchProviderException;
-import java.security.SecureRandom;
-import java.security.Security;
-import java.security.Signature;
-import java.util.Random;
-import java.util.logging.Level;
-import java.util.logging.Logger;
-import javax.crypto.Cipher;
-import javax.crypto.CipherOutputStream;
 
+import javax.crypto.Cipher;
 import javax.crypto.KeyGenerator;
 import javax.crypto.SecretKey;
-import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 public class CryptoUtil2 {
 
@@ -106,7 +97,7 @@ public class CryptoUtil2 {
 		Cipher c = Cipher.getInstance(ALGO);
 		c.init(Cipher.ENCRYPT_MODE, key);
 		byte[] encVal = c.doFinal(data.getBytes());
-		String encryptedValue = new BASE64Encoder().encode(encVal);
+		String encryptedValue = Base64.getEncoder().withoutPadding().encodeToString(encVal);
 		return encryptedValue;
 
 	}
@@ -149,7 +140,7 @@ public class CryptoUtil2 {
 
 		Cipher c = Cipher.getInstance(ALGO);
 		c.init(Cipher.DECRYPT_MODE, key);
-		byte[] decordedValue = new BASE64Decoder().decodeBuffer(encryptedData);
+		byte[] decordedValue = Base64.getDecoder().decode(encryptedData);
 		byte[] decValue = c.doFinal(decordedValue);
 		String decryptedValue = new String(decValue);
 		return decryptedValue;
@@ -181,17 +172,14 @@ public class CryptoUtil2 {
 
 	public static String convertKeyToString(SecretKey key) throws NoSuchAlgorithmException {
 
-		BASE64Encoder encoder = new BASE64Encoder();
 		byte[] array = key.getEncoded();
-		String keyString;
-		keyString = encoder.encode(array);
+		String keyString = Base64.getEncoder().encodeToString(array);
 		return keyString;
 
 	}
 
 	public static SecretKey convertStringToKey(String keyString, String ALGO) throws IOException {
-		BASE64Decoder decoder = new BASE64Decoder();
-		byte[] encodedKey = decoder.decodeBuffer(keyString);
+		byte[] encodedKey =  Base64.getDecoder().decode(keyString);
 
 		SecretKey key = new SecretKeySpec(encodedKey, 0, encodedKey.length, ALGO);
 		return key;
